fixed navbar wrapping

--- a/css/lunacy.css
+++ b/css/lunacy.css
@@ -56,7 +56,7 @@ h1 {
   display: flex;
   list-style-type: none;
   border-radius: 50px;
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0,15,30,0.9);
 }
 
 .navBar a {
@@ -66,6 +66,7 @@ h1 {
   font-weight: bold;
   text-decoration: none;
   font-size: 1.1em;
+  white-space: nowrap;
 }
 
 .navBar li:first-child {
@@ -105,7 +106,7 @@ h1 {
 }
 
 #gvgTable th {
-  background-color: rgba(0,35,50,0.9);
+  background-color: rgba(0,38,60,0.9);
   padding: 5px 10px;
   text-align: left;
 }
@@ -120,11 +121,11 @@ h1 {
 }
 
 #gvgTable tr td {
-  background-color: rgba(0,20,30,0.9);
+  background-color: rgba(0,15,30,0.9);
 }
 
 #gvgTable tr:nth-child(odd) td {
-  background-color: rgba(0,35,50,0.9);
+  background-color: rgba(0,38,60,0.9);
 }
 
 #gvgTable tr:first-child th:first-child {
